# TFG_UR3e

./: EJEC_BASICAS_ROS2  PLANIFICADORES_HOME_PIEZA.txt  PLANIFICADOR_CAMBIO_CUADRANTE_1_a_2.txt  PLANIFICADOR_CAMBIO_CUADRANTE_2_a_1.txt  README.md  hello_moveit_ur.cpp
hello_moveit_ur/: CMakeLists.txt  package.xml
hello_moveit_ur/launch/: hello_moveit_ur_launch.py  hello_moveit_ur_launch_arm1.py  hello_moveit_ur_launch_arm2.py  pick_place_demo.launch.py
hello_moveit_ur/src/: cartesian_path_planner.cpp  hello_moveit_ur.cpp  mtc_tutorial.cpp
hello_moveit_ur/src/hola/: BRAZO_PINZA_BUCLE_UR.cpp  CambioCuadrante.cpp  cartesian_path_planner.cpp  hello_moveit_brazo_ur.cpp  hello_moveit_gripper_y_brazo.cpp  hello_moveit_ur.cpp  hello_moveit_ur_brazoygripper.cpp  hello_moveit_ur_class.cpp  hello_moveit_ur_gripper.cpp  home_to_piece.cpp  robot1_conexion.cpp  robot2_conexion.cpp
pick_and_place_piezas/: CMakeLists.txt  package.xml
pick_and_place_piezas/launch/: pick_and_place_piezas.launch.py
pick_and_place_piezas/src/: pick_and_place_piezas.cpp
robot1_dualrobots/: CMakeLists.txt  package.xml
robot1_dualrobots/launch/: robot1_dualrobots.launch.py
robot1_dualrobots/src/: robot1_dualrobots.cpp
robot1_dualrobots/src/PRUEBAS/: robot1_dualrobots_pruebas.cpp
robot2_dualrobots/: CMakeLists.txt  package.xml
robot2_dualrobots/launch/: robot2_dualrobots.launch.py
robot2_dualrobots/src/: robot2_dualrobots.cpp
robot2_dualrobots/src/PRUEBAS/: robot2_dualrobots_Seguridad.cpp
robot_pieza/: CMakeLists.txt  package.xml
robot_pieza/launch/: robot_pieza.launch.py
robot_pieza/src/: robot1.cpp
robot_pieza_cliente/: CMakeLists.txt  package.xml
robot_pieza_cliente/launch/: robot_pieza_cliente_launch.py
robot_pieza_cliente/src/: robot2  robot2.cpp  robot2b.cpp  robot2c.cpp
robot_pieza_cliente/src/socket/: robot2a.cpp  robot2c.cpp
robot_pieza_servidor/: CMakeLists.txt  package.xml
robot_pieza_servidor/launch/: robot_pieza_servidor_launch.py
robot_pieza_servidor/src/socket_prueba/: robot1a.cpp  robot1b.cpp  robot1c.cpp
ur_bringup/: package.xml
ur_bringup/config/: test_goal_publishers_config.yaml
ur_bringup/launch/: multiarm.launch.py  ur_arm1_control.launch.py  ur_arm1_moveit.launch.py  ur_arm2_control.launch.py  ur_arm2_moveit.launch.py  ur_control.launch.py  ur_multiarm_control.launch.py  ur_multiarm_moveit.launch.py
ur_moveit_config/: package.xml
ur_moveit_config/config/: ros_controllers.yaml  ur3e.srdf
ur_moveit_config/launch/: my_planning_execution.launch.py
ur_moveit_config/rviz/: view_robot (copy).rviz
